[FIX] mass_mailing: needlessly large gap in mailing list contacts
Prior to this commit:
In email marketing, when we click on the import button of the "mailing list
contacts", we find a needlessly large gap beneath the contact list.

Post this commit:
The class which creates the space is removed and hence we get the required output.

Task-3258581

closes odoo/odoo#119876

X-original-commit: 1ee98fb9f6bd8289c5ffcada14c3db62afba5a0d

--- a/addons/mass_mailing/static/src/scss/mass_mailing.scss
+++ b/addons/mass_mailing/static/src/scss/mass_mailing.scss
@@ -216,11 +216,6 @@
     }
 }
 
-
-.o_mailing_contact_import_list {
-    min-height: 150px;
-}
-
 .o_field_mass_mailing_html {
     display: block;
 
